<resources>
    <string name="app_name">MP3 Player</string>
    <string name="back"><![CDATA[<]]></string>
    <string name="rewind"><![CDATA[<<]]></string>
    <string name="forward"><![CDATA[>>]]></string>
    <string name="pause">||</string>
    <string name="tutorials_point">Tutorials point</string>
    <string name="mp3_player">MP3 Player</string>
    <string name="todo">TODO</string>
    <string name="rrr">________________</string>
</resources>